--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.j256.ormlite:ormlite-core:4.4'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
 }
