algoritmo pra comparar imagem e correcoes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,10 @@
             android:label="@string/title_activity_finish" />
         <activity
             android:name=".ResumoActivity"
-            android:label="@string/title_activity_resumo"></activity>
+            android:label="@string/title_activity_resumo" />
+        <activity
+            android:name=".view.DetailActivity"
+            android:label="@string/title_activity_detail"></activity>
     </application>
 
 </manifest>
