novos icones, algoritmo de comparacao de imagens, animacao

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@
 
 buildscript {
     repositories {
-        jcenter()
+        jcenter{
+
+            url "http://jcenter.bintray.com/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
