--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,9 @@ android {
         applicationId "br.com.lucasaquiles.cogg"
         minSdkVersion 17
         targetSdkVersion 21
-        versionCode 12
+        versionCode 13
     
-        versionName "12.0"
+        versionName "13.2.0"
     }
     buildTypes {
         release {
@@ -25,6 +25,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
     productFlavors {
     }
 }
@@ -36,5 +38,6 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.j256.ormlite:ormlite-core:4.4'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 
 }
