--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
 
     <supports-screens
+        android:resizeable="true"
         android:xlargeScreens="true"
         android:largeScreens="true"
         android:normalScreens="true"
